Fixes #1895 Caption is right aligned on IE on IOrderedLayoutVertical where widget is aligned right
svn changeset:5018/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
+++ b/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
@@ -26,10 +26,6 @@
 	float:left; 	
 }
 	
-.i-orderedlayout-w1 {
-	text-align:left;	
-}
-	
 .i-orderedlayout-w2 .i-caption:after, .i-orderedlayout-w2:after {
   	content: ".";
 	display: block;
