--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -709,10 +709,6 @@ input.i-modified,
 	float:left; 	
 }
 	
-.i-orderedlayout-w1 {
-	text-align:left;	
-}
-	
 .i-orderedlayout-w2 .i-caption:after, .i-orderedlayout-w2:after {
   	content: ".";
 	display: block;
